# ydb-c-binding

./: .clangd  .gitignore  CMakeLists.txt  docker-compose.yml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
include/: internal.h  internal.hpp  ydb.h  ydb_error.h
misc/go/: go.mod
runner/: CMakeLists.txt  main.cpp  param_builder.c  pybind.py  retry_wrapper.c  wrapper.c
src/: driver.cpp  error.cpp  internal.hpp  query_service.cpp  result_details.cpp  table_service.cpp
tests/: CMakeLists.txt  retry_settings_test.cpp  status_mapping_test.cpp
